# Courtroom_Scheduler

./: Dockerfile  Pyproject.toml  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
agents/: __init__.py  llm_agent.py  random_agent.py
env/: __init__.py  environment.py  models.py  simulator.py
server/: app.py
static/: index.html
tasks/: __init__.py  graders.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_env.py  test_graders.py
