[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courtroom-scheduler"
version = "1.0.0"
description = "OpenEnv-compliant Courtroom Case Scheduling Negotiator environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "scheduling", "reinforcement-learning", "legal"]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "courtroom-scheduler.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["courtroom-scheduler", "courtroom-scheduler.server"]
package-dir = { "courtroom-scheduler" = ".", "courtroom-scheduler.server" = "server" }